--- a/shared/latex/en/unsupervised/anomaly-detection/isolation-forest.tex
+++ b/shared/latex/en/unsupervised/anomaly-detection/isolation-forest.tex
@@ -1,13 +1,13 @@
-\begin{frame}{Arbre d'isolement}
+\begin{frame}{Isolation Tree}
   \begin{itemize}
-    \item arbre aléatoire (comme un arbre de décision mais le split est aléatoire)
-    \item but : isoler une anomalie plus vite qu'un exemple normal
-    \item petit chemin pour arriver à une feuille : anomalie
+    \item random tree (like a decision tree but the split is random)
+    \item goal : isolate an anomaly faster than a normal example
+    \item small path to reach a leaf : anomaly
   \end{itemize}
 
-  → Se sert du fait que les caractéristiques des anomalies ne sont pas distribuées comme les autres.
+  → Uses the fact that anomaly features are not distributed like others.
 \end{frame}
 
-\begin{frame}{Forêt d'isolement}
+\begin{frame}{Isolation forest}
   \V{["img/isolation-forest", "tw", 0.9] | image}
 \end{frame}
