--- a/shared/latex/en/unsupervised/clustering/intro.tex
+++ b/shared/latex/en/unsupervised/clustering/intro.tex
@@ -1,17 +1,17 @@
-\begin{frame}{But}
-  \begin{itemize}[<+->]
-    \item Regrouper des instances du training set en \og{}clusters\fg{}
-    \item Parfois hiérarchiquement
-    \item Parfois en décidant du nombre de clusters (semi-)automatiquement
+\begin{frame}{Goals}
+  \begin{itemize}
+    \item Group instances of the training set into clusters
+    \item Sometimes hierarchically
+    \item Sometimes by deciding the number of clusters (semi-)automatically
   \end{itemize}
 \end{frame}
 
-\begin{frame}{Approches}
-  On distingue trois grandes familles~:
+\begin{frame}{Approaches}
+  We distinguish three main families:
 
-  \begin{itemize}[<+->]
-    \item K-means et ses algorithmes dérivés
-    \item Les algorithmes agglomératifs
-    \item Les algorithmes d'estimation de densité
+  \begin{itemize}
+    \item K-means and its derived algorithms
+    \item Agglomerative algorithms
+    \item Density-based algorithms
   \end{itemize}
 \end{frame}
