--- a/shared/latex/en/unsupervised/clustering/pca-classification-hierarchique-composantes-principales.tex
+++ b/shared/latex/en/unsupervised/clustering/pca-classification-hierarchique-composantes-principales.tex
@@ -1,13 +1,13 @@
-\begin{frame}{Classification Hiérarchique sur Composantes Principales}
+\begin{frame}{Hierarchical Classification on PCA}
   Réduction de dimension par PCA, puis clustering hiérarchique.
 
   \V{["img/hybrid-pca-hierarchical", "th", 0.7] | image}
 \end{frame}
 
-\begin{frame}{Exemple}
+\begin{frame}{Example}
   \V{["img/chcp-us-crime-data", "th", 0.55] | image}
 
-  Obtenus à partir de données relatives aux crimes aux États-Unis.
+  Obtained from crime data in the United States.
 
-  Colonnes d'origine : Population Totale, Meurtres, Viols, Agression  
+  Original columns: Total Population, Murder, Rape, Assault
 \end{frame}
