--- a/shared/latex/en/unsupervised/clustering/tuto.tex
+++ b/shared/latex/en/unsupervised/clustering/tuto.tex
@@ -1,6 +1,6 @@
 \begin{frame}{Liens}
   \begin{itemize}
-    \item \bluelink{https://colab.research.google.com/drive/1-WLPr0rs_h2lf7kvUYJnGAEmwrt86rnE\#forceEdit=true&sandboxMode=true}{K-means --- Tutoriel}
-    \item \bluelink{https://colab.research.google.com/drive/1ENdoGQdU5nHo6_2O6Ip9Qz3hAlsfW3c4\#forceEdit=true&sandboxMode=true}{DBSCAN --- Tutoriel}
+    \item \bluelink{https://colab.research.google.com/drive/1-WLPr0rs_h2lf7kvUYJnGAEmwrt86rnE\#forceEdit=true&sandboxMode=true}{K-means --- Tutorial}
+    \item \bluelink{https://colab.research.google.com/drive/1ENdoGQdU5nHo6_2O6Ip9Qz3hAlsfW3c4\#forceEdit=true&sandboxMode=true}{DBSCAN --- Tutorial}
   \end{itemize}
 \end{frame}
