--- a/shared/latex/en/unsupervised/dimensionality-reduction/intro.tex
+++ b/shared/latex/en/unsupervised/dimensionality-reduction/intro.tex
@@ -1,6 +1,6 @@
 \begin{frame}{Problématique}
     \begin{center}
-      Comment appréhender des données en grande dimension ?
+      How to apprehend high dimensional data?
     \end{center}
     \[
     X = \begin{bmatrix}
@@ -12,12 +12,12 @@
     \]
 \end{frame}
 
-\begin{frame}{La malédiction des grandes dimensions}
+\begin{frame}{Big dimensonality curse}
     \begin{center}
-      Nombre d'extrémités dans une espace de dimension : \\
+      Number of extremities in a space of dimension: \\
       $\;$ \\
       \begin{tabular}{cc}
-        Dimensions & Points d'un hypercube \\
+        Dimensions & Hybercube points \\
         \midrule
         1 & 2 \\
         2 & 4 \\
@@ -27,15 +27,15 @@
       \end{tabular}
     \end{center}
 
-  \begin{alertblock}{Besoin en données}
-    Corrélé exponentiellement à la taille des espaces.
+  \begin{alertblock}{Needs of data}
+    Exponentially correlated to space size.
   \end{alertblock}
 \end{frame}
 
-\begin{frame}{Approches}
-    \begin{itemize}
-    \item Séléction de dimensions
-    \item Projections linéaires (ACP, LDA, …)
-    \item Projections non-linéaires (t-SNE, UMAP, kernels, embeddings, …)
-    \end{itemize}
+\begin{frame}{Approaches}
+  \begin{itemize}
+  \item Dimensions selection
+  \item Linear projections (PCA, LDA, ...)
+  \item Non-linear projections (t-SNE, UMAP, kernels, embeddings, ...)
+  \end{itemize}
 \end{frame}
