--- a/shared/latex/en/unsupervised/introduction.tex
+++ b/shared/latex/en/unsupervised/introduction.tex
@@ -1,5 +1,5 @@
 \begin{frame}{But}
-  Détection de variables cachées, de \og{}structures\fg{} cachées (clusters, variété topologique (manifold), …)
+  Detection of hidden variables, hidden "\textit{structures}" (clusters, topological variety (manifold), ...)
 
   \begin{minipage}[l]{0.69\linewidth}
     \V{["img/clustering", "tw", 0.9] | image}
@@ -9,7 +9,7 @@
   \end{minipage}\hfill
 \end{frame}
 
-\begin{frame}{Réduction de Dimensionnalité}
+\begin{frame}{Dimensionality reduction}
   \V{["img/pca-nuage", "th", 0.7] | image}
 \end{frame}
 
@@ -18,6 +18,6 @@
   \V{["img/clustering-clients-2", "tw", 0.5] | image}
 \end{frame}
 
-\begin{frame}{Détection d'anomalie}
+\begin{frame}{Anomaly detection}
   \V{["img/outlier-fish", "tw", 0.9] | image}
 \end{frame}
