--- a/shared/latex/en/unsupervised/anomaly-detection/demo.tex
+++ b/shared/latex/en/unsupervised/anomaly-detection/demo.tex
@@ -1,6 +1,6 @@
 \begin{frame}{Démonstration de détection d'anomalie}
   \begin{itemize}
-    \item \bluelink{https://colab.research.google.com/drive/1-nbjcb5JCVDyDDK6DFsVpfBEKcD34X_C\#forceEdit=true&sandboxMode=true}{Local Outlier Factor --- Tutoriel}
-    \item \bluelink{https://colab.research.google.com/drive/1EsUmo2brFdXJ1I2WVEopt3fK2y1jTYE2\#forceEdit=true&sandboxMode=true}{Isolation Forest --- Tutoriel}
+    \item \bluelink{https://colab.research.google.com/drive/1-nbjcb5JCVDyDDK6DFsVpfBEKcD34X_C\#forceEdit=true&sandboxMode=true}{Local Outlier Factor --- Tutorial}
+    \item \bluelink{https://colab.research.google.com/drive/1EsUmo2brFdXJ1I2WVEopt3fK2y1jTYE2\#forceEdit=true&sandboxMode=true}{Isolation Forest --- Tutorial}
   \end{itemize}
 \end{frame}
