--- a/shared/latex/en/unsupervised/clustering/conclusion.tex
+++ b/shared/latex/en/unsupervised/clustering/conclusion.tex
@@ -6,12 +6,8 @@
 
 \begin{frame}
   \frametitle{Conclusion}
-  \begin{center}
-    Pas de métrique satisfaisante ! $\Leftarrow$ Théorie de la Décision : \\
-    $\;$ \\
-    \blue{Problème qui se mesure en plusieurs dimensions} \\
-    $\Rightarrow$ \\
-    \red{Pas de solution unique !}
-  \end{center}
-  \V{["img/pareto", "tw", 0.9] | image}
+  \begin{itemize}
+    \item No \textit{best} metric
+    \item Large spectrum of metrics dependant of the multidimensional data structure
+  \end{itemize}
 \end{frame}
