Slight tweaks on the base nn section, especially the english version
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/en/nn/deep-optimize.tex
+++ b/shared/latex/en/nn/deep-optimize.tex
@@ -29,7 +29,7 @@
 
 \begin{frame}{Optimization algorithm}
   Better than vanilla stochastic gradient descent
-  \begin{itemize}[<+(1)->]
+  \begin{itemize}
     \item Root Mean Square Propagation (RMSProp)
     \item Adaptative Gradient Algorithm (AdaGrad)
     \item Adaptative Moment Estimation (Adam)    $\qquad\Leftarrow$ Default choice
@@ -38,7 +38,7 @@
 \end{frame}
 
 \begin{frame}{Root Mean Square Propagation (RMSProp)}
-  \begin{itemize}[<+->]
+  \begin{itemize}
     \item One learning rate per parameter
     \item Prevents large frequent updates:
       \begin{itemize}
