--- a/shared/latex/en/nn/gradient-descent.tex
+++ b/shared/latex/en/nn/gradient-descent.tex
@@ -23,7 +23,7 @@
 \end{frame}
 
 \begin{frame}{Algorithm}
-  \begin{enumerate}[<+->]
+  \begin{enumerate}
     \item Parameters $\theta_i$ random initialization for the model $f_{\theta}, i\in[1..k]$
     \item For $n$ epochs:
       \begin{itemize}
