--- a/shared/latex/en/nn/optimize.tex
+++ b/shared/latex/en/nn/optimize.tex
@@ -16,7 +16,7 @@
 \end{frame}
 
 \begin{frame}{Approach to optimize hyperparameters}
-  \begin{itemize}[<+->]
+  \begin{itemize}
     \item Start with good baselines and a simple “manual” search
     \item When you are done with the basic pipeline, implement a proper search using a dedicated library
   \end{itemize}
