--- a/shared/latex/nn/deep-optimize.tex
+++ b/shared/latex/nn/deep-optimize.tex
@@ -29,7 +29,7 @@
 
 \begin{frame}{Algorithme d'optimisation}
   Optimisateur plus rapide que SGD
-  \begin{itemize}[<+(1)->]
+  \begin{itemize}
     \item Adaptative Gradient Algorithm (AdaGrad)
     \item Root Mean Square Propagation (RMSProp)
     \item Adaptative Moment Estimation (Adam)    $\Leftarrow$
