--- a/shared/latex/nn/gradient-descent.tex
+++ b/shared/latex/nn/gradient-descent.tex
@@ -23,7 +23,7 @@
 \end{frame}
 
 \begin{frame}{Algorithme}
-  \begin{enumerate}[<+->]
+  \begin{enumerate}
     \item Initialisation aléatoire des paramètres $\theta_i$ du modèle $f_{\theta}, i\in[1..k]$
     \item Pour $n$ itérations~:
       \begin{itemize}
