--- a/shared/latex/nn/optimize.tex
+++ b/shared/latex/nn/optimize.tex
@@ -15,7 +15,7 @@
 \end{frame}
 
 \begin{frame}{Approche pour optimiser les hyper-paramètres}
-  \begin{itemize}[<+->]
+  \begin{itemize}
     \item Commencer avec une bonne baseline et une rapide recherche \frquote{à la main}
     \item Quand toute la pipeline est fonctionnelle, implémenter la recherche en utilisation une librairie spécialisée
   \end{itemize}
