Some additional fixes on base nn section
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/en/nn/help-pointers.tex
+++ b/shared/latex/en/nn/help-pointers.tex
@@ -1,7 +1,7 @@
 
-\begin{frame}{Ressource complémentaires}
+\begin{frame}{Additional resources}
   \begin{itemize}
-    \item \bluelink{https://fr.coursera.org/projects/multi-task-models-keras}{Modèles multi-tâches sur Coursera}
-    \item \bluelink{http://jalammar.github.io/illustrated-transformer/}{Billet de blog de Jay Alammar sur les transformeurs}
+    \item \bluelink{https://coursera.org/projects/multi-task-models-keras}{Multi-tasks models on Coursera}
+    \item \bluelink{http://jalammar.github.io/illustrated-transformer/}{Blog by Jay Alammar on transformers}
   \end{itemize}
 \end{frame}
